# JsRuntimeHost

./: CMakeLists.txt
Core/: CMakeLists.txt
Core/AppRuntime/Source/: AppRuntime_Napi-c-external.cpp
Core/JsRuntime/: CMakeLists.txt
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/Scripts/: tests.js
